@@ -13,11 +13,15 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.TypeToken;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+
 import java.lang.reflect.Type;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
@@ -31,7 +35,7 @@ class CategoryServiceTest {
     @Mock
     private CategoryRepository categoryRepository;
 
-    @Mock(lenient = true)
+    @Mock
     private ModelMapper modelMapper;
 
     private Category category;
@@ -39,7 +43,6 @@ class CategoryServiceTest {
 
     @BeforeEach
     void setUp() {
-
         categoryDto = new CategoryDto();
         categoryDto.setIdentifier("CAT01");
         categoryDto.setSuccess(true);
@@ -48,207 +51,154 @@ class CategoryServiceTest {
         category.setIdentifier("CAT01");
         category.setSuperCategory("PARENT");
         category.setStatus(true);
+        category.setDeleted(false);
     }
 
     @Test
     void testSave_Success() {
+        when(categoryRepository.findByIdentifier("CAT01")).thenReturn(null);
+        when(modelMapper.map(categoryDto, Category.class)).thenReturn(category);
 
-        when(categoryRepository.findByIdentifier("CAT01"))
-                .thenReturn(null);
-
-        when(modelMapper.map(categoryDto, Category.class))
-                .thenReturn(category);
-
-        CategoryDto response =
-                categoryService.save(categoryDto);
+        CategoryDto response = categoryService.save(categoryDto);
 
         assertNotNull(response);
         assertEquals("CAT01", response.getIdentifier());
         assertTrue(response.isSuccess());
         assertNull(response.getMessage());
 
-        verify(categoryRepository).findByIdentifier("CAT01");
-        verify(modelMapper).map(categoryDto, Category.class);
-        verify(categoryRepository).save(category);
+        verify(categoryRepository, times(1)).findByIdentifier("CAT01");
+        verify(modelMapper, times(1)).map(categoryDto, Category.class);
+        verify(categoryRepository, times(1)).save(category);
     }
 
     @Test
-    void testSave_Failure_AlreadyExists() {
+    void testSave_Failure_AlreadyExists_Active() {
+        category.setDeleted(false);
+        when(categoryRepository.findByIdentifier("CAT01")).thenReturn(category);
 
-        when(categoryRepository.findByIdentifier("CAT01"))
-                .thenReturn(category);
-
-        CategoryDto response =
-                categoryService.save(categoryDto);
+        CategoryDto response = categoryService.save(categoryDto);
 
         assertNotNull(response);
         assertFalse(response.isSuccess());
+        assertEquals("Category with identifier - CAT01 already exists", response.getMessage());
 
-        assertEquals(
-                "Category with identifier - CAT01 already exists",
-                response.getMessage()
-        );
-
-        verify(categoryRepository).findByIdentifier("CAT01");
+        verify(categoryRepository, times(1)).findByIdentifier("CAT01");
         verify(categoryRepository, never()).save(any());
-        verify(modelMapper, never()).map(any(), any());
+    }
+
+    @Test
+    void testSave_Failure_AlreadyExists_SoftDeleted() {
+        category.setDeleted(true);
+        when(categoryRepository.findByIdentifier("CAT01")).thenReturn(category);
+
+        CategoryDto response = categoryService.save(categoryDto);
+
+        assertNotNull(response);
+        assertFalse(response.isSuccess());
+        assertEquals("Category identifier - CAT01 not available ", response.getMessage());
+
+        verify(categoryRepository, times(1)).findByIdentifier("CAT01");
+        verify(categoryRepository, never()).save(any());
     }
 
     @Test
     void testUpdate_Success() {
+        when(categoryRepository.findByIdentifier("CAT01")).thenReturn(category);
 
-        when(categoryRepository.findByIdentifier("CAT01"))
-                .thenReturn(category);
-
-        CategoryDto response =
-                categoryService.update(categoryDto);
+        CategoryDto response = categoryService.update(categoryDto);
 
         assertNotNull(response);
         assertEquals("CAT01", response.getIdentifier());
 
-        verify(categoryRepository).findByIdentifier("CAT01");
-        verify(modelMapper).map(categoryDto, category);
-        verify(categoryRepository).save(category);
+        verify(categoryRepository, times(1)).findByIdentifier("CAT01");
+        verify(modelMapper, times(1)).map(categoryDto, category);
+        verify(categoryRepository, times(1)).save(category);
     }
 
     @Test
     void testUpdate_Failure_NotFound() {
+        when(categoryRepository.findByIdentifier("CAT01")).thenReturn(null);
 
-        when(categoryRepository.findByIdentifier("CAT01"))
-                .thenReturn(null);
-
-        CategoryDto response =
-                categoryService.update(categoryDto);
+        CategoryDto response = categoryService.update(categoryDto);
 
         assertNotNull(response);
         assertFalse(response.isSuccess());
+        assertEquals("category with identifier - CAT01 not found", response.getMessage());
 
-        assertEquals(
-                "category with identifier - CAT01 not found",
-                response.getMessage()
-        );
-
-        verify(categoryRepository).findByIdentifier("CAT01");
+        verify(categoryRepository, times(1)).findByIdentifier("CAT01");
         verify(categoryRepository, never()).save(any());
-        verify(modelMapper, never()).map(any(), any());
     }
 
     @Test
-    void testDelete() {
-
-        doNothing().when(categoryRepository)
-                .deleteByIdentifier("CAT01");
-
-        categoryService.delete("CAT01");
-
-        verify(categoryRepository).deleteByIdentifier("CAT01");
+    void testDelete_Success() {
+        String identifier = "CAT01";
+        when(categoryRepository.findByIdentifierAndDeletedFalse(identifier)).thenReturn(category);
+        assertDoesNotThrow(() -> categoryService.delete(identifier));
+        verify(categoryRepository, times(1)).findByIdentifierAndDeletedFalse(identifier);
+        assertTrue(category.getDeleted());
     }
 
     @Test
     void testFindByIdentifier_Success() {
+        when(categoryRepository.findByIdentifierAndDeletedFalse("CAT01")).thenReturn(category);
+        when(modelMapper.map(category, CategoryDto.class)).thenReturn(categoryDto);
 
-        when(categoryRepository.findByIdentifier("CAT01"))
-                .thenReturn(category);
-
-        when(modelMapper.map(category, CategoryDto.class))
-                .thenReturn(categoryDto);
-
-        CategoryDto response =
-                categoryService.findByIdentifier("CAT01");
+        CategoryDto response = categoryService.findByIdentifier("CAT01");
 
         assertNotNull(response);
         assertEquals("CAT01", response.getIdentifier());
-
-        verify(categoryRepository).findByIdentifier("CAT01");
-        verify(modelMapper).map(category, CategoryDto.class);
+        verify(categoryRepository, times(1)).findByIdentifierAndDeletedFalse("CAT01");
+        verify(modelMapper, times(1)).map(category, CategoryDto.class);
     }
 
     @Test
     void testFindByIdentifier_NotFound() {
-
-        when(categoryRepository.findByIdentifier("CAT01"))
-                .thenReturn(null);
-
-        when(modelMapper.map(null, CategoryDto.class))
-                .thenReturn(null);
-
-        CategoryDto response =
-                categoryService.findByIdentifier("CAT01");
-
+        when(categoryRepository.findByIdentifierAndDeletedFalse("CAT01")).thenReturn(null);
+        when(modelMapper.map(null, CategoryDto.class)).thenReturn(null);
+        CategoryDto response = categoryService.findByIdentifier("CAT01");
         assertNull(response);
-
-        verify(categoryRepository).findByIdentifier("CAT01");
-        verify(modelMapper).map(null, CategoryDto.class);
+        verify(categoryRepository, times(1)).findByIdentifierAndDeletedFalse("CAT01");
+        verify(modelMapper, times(1)).map(null, CategoryDto.class);
     }
 
     @Test
     void testFindAll_WithData() {
+        List<Category> categories = List.of(category);
+        List<CategoryDto> dtoList = List.of(categoryDto);
+        Pageable pageable = PageRequest.of(0, 50);
+        Page<Category> categoryPage = new PageImpl<>(categories, pageable, categories.size());
+        Type listType = new TypeToken<List<CategoryDto>>() {
+        }.getType();
+        when(categoryRepository.findAllByDeletedFalse(pageable)).thenReturn(categoryPage);
+        when(modelMapper.map(categoryPage.getContent(), listType)).thenReturn(dtoList);
 
-        List<Category> categories =
-                List.of(category);
-
-        List<CategoryDto> dtoList =
-                List.of(categoryDto);
-
-        Pageable pageable =
-                PageRequest.of(0, 50);
-
-        Page<Category> categoryPage =
-                new PageImpl<>(categories, pageable, categories.size());
-
-        Type listType =
-                new TypeToken<List<CategoryDto>>() {
-                }.getType();
-
-        when(categoryRepository.findAll(pageable))
-                .thenReturn(categoryPage);
-
-        when(modelMapper.map(categoryPage.getContent(), listType))
-                .thenReturn(dtoList);
-
-        WsDto<CategoryDto> result =
-                categoryService.findAll(pageable);
+        WsDto<CategoryDto> result = categoryService.findAll(pageable);
 
         assertNotNull(result);
         assertEquals(1, result.getDtoList().size());
         assertEquals(1, result.getTotalRecords());
-
-        verify(categoryRepository).findAll(pageable);
-        verify(modelMapper).map(categoryPage.getContent(), listType);
+        verify(categoryRepository, times(1)).findAllByDeletedFalse(pageable);
     }
 
     @Test
     void testFindAll_EmptyList() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Category> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
+        Type listType = new TypeToken<List<CategoryDto>>() {
+        }.getType();
 
-        Pageable pageable =
-                PageRequest.of(0, 10);
+        when(categoryRepository.findAllByDeletedFalse(pageable)).thenReturn(emptyPage);
+        when(modelMapper.map(emptyPage.getContent(), listType)).thenReturn(Collections.emptyList());
 
-        Page<Category> emptyPage =
-                new PageImpl<>(Collections.emptyList(), pageable, 0);
-
-        Type listType =
-                new TypeToken<List<CategoryDto>>() {
-                }.getType();
-
-        when(categoryRepository.findAll(pageable))
-                .thenReturn(emptyPage);
-
-        when(modelMapper.map(emptyPage.getContent(), listType))
-                .thenReturn(Collections.emptyList());
-
-        WsDto<CategoryDto> result =
-                categoryService.findAll(pageable);
+        WsDto<CategoryDto> result = categoryService.findAll(pageable);
 
         assertNotNull(result);
         assertTrue(result.getDtoList().isEmpty());
-
-        verify(categoryRepository).findAll(pageable);
-        verify(modelMapper).map(emptyPage.getContent(), listType);
+        verify(categoryRepository, times(1)).findAllByDeletedFalse(pageable);
     }
 
     @Test
     void testFindAllWithSuperCategory_WithFilteredData() {
-
         Category category1 = new Category();
         category1.setIdentifier("CAT01");
         category1.setSuperCategory("PARENT");
@@ -257,38 +207,25 @@ class CategoryServiceTest {
         category2.setIdentifier("CAT02");
         category2.setSuperCategory("");
 
-        List<Category> allCategories =
-                List.of(category1, category2);
+        List<Category> allCategories = List.of(category1, category2);
+        List<Category> filteredCategories = List.of(category1);
+        List<CategoryDto> dtoList = List.of(categoryDto);
+        Type listType = new TypeToken<List<CategoryDto>>() {
+        }.getType();
 
-        List<Category> filteredCategories =
-                List.of(category1);
+        when(categoryRepository.findAllByDeletedFalse()).thenReturn(allCategories);
+        when(modelMapper.map(filteredCategories, listType)).thenReturn(dtoList);
 
-        List<CategoryDto> dtoList =
-                List.of(categoryDto);
-
-        Type listType =
-                new TypeToken<List<CategoryDto>>() {
-                }.getType();
-
-        when(categoryRepository.findAll())
-                .thenReturn(allCategories);
-
-        when(modelMapper.map(filteredCategories, listType))
-                .thenReturn(dtoList);
-
-        List<CategoryDto> result =
-                categoryService.findAllWithSuperCategory();
+        List<CategoryDto> result = categoryService.findAllWithSuperCategory();
 
         assertNotNull(result);
         assertEquals(1, result.size());
-
-        verify(categoryRepository).findAll();
-        verify(modelMapper).map(filteredCategories, listType);
+        verify(categoryRepository, times(1)).findAllByDeletedFalse();
+        verify(modelMapper, times(1)).map(filteredCategories, listType);
     }
 
     @Test
     void testFindAllWithSuperCategory_EmptyResult() {
-
         Category category1 = new Category();
         category1.setIdentifier("CAT01");
         category1.setSuperCategory("");
@@ -297,26 +234,15 @@ class CategoryServiceTest {
         category2.setIdentifier("CAT02");
         category2.setSuperCategory("");
 
-        List<Category> allCategories =
-                List.of(category1, category2);
-
-        Type listType =
-                new TypeToken<List<CategoryDto>>() {
-                }.getType();
-
-        when(categoryRepository.findAll())
-                .thenReturn(allCategories);
-
-        when(modelMapper.map(Collections.emptyList(), listType))
-                .thenReturn(Collections.emptyList());
-
-        List<CategoryDto> result =
-                categoryService.findAllWithSuperCategory();
-
+        List<Category> allCategories = List.of(category1, category2);
+        Type listType = new TypeToken<List<CategoryDto>>() {
+        }.getType();
+        when(categoryRepository.findAllByDeletedFalse()).thenReturn(allCategories);
+        when(modelMapper.map(Collections.emptyList(), listType)).thenReturn(Collections.emptyList());
+        List<CategoryDto> result = categoryService.findAllWithSuperCategory();
         assertNotNull(result);
         assertTrue(result.isEmpty());
-
-        verify(categoryRepository).findAll();
-        verify(modelMapper).map(Collections.emptyList(), listType);
+        verify(categoryRepository, times(1)).findAllByDeletedFalse();
+        verify(modelMapper, times(1)).map(Collections.emptyList(), listType);
     }
 }
